[package]
name = "quictun"
version = "1.0.5"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-std = "1.12.0"
byteorder = "1.4.3"
directories = "4.0.1"
env_logger = "0.10.0"
futures = "0.3.27"
log = "0.4.17"
quinn = "0.9.3"
rcgen = "0.10.0"
regex = "1.7.1"
ring = "0.16.20"
rustls = { version = "0.20.8", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.2"
structopt = "0.3.26"
tokio = { version = "1.26.0", features = ["full"] }
url = "2.3.1"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
